WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308914
Unable to select live text on paused video on youtube, khan academy, marketwatch and cnbc
https://bugs.webkit.org/show_bug.cgi?id=308914
Summary
Unable to select live text on paused video on youtube, khan academy, marketwa...
Jean-Yves Avenard [:jya]
Reported
2026-02-28 20:15:06 PST
Summary Unable to select live text on khan academy video. See attached screen recordings. Steps to reproduce 1. Go to
https://www.khanacademy.org/economics-finance-domain/macroeconomics/macro-basic-economics-concepts/macro-scarcity/v/introduction-to-economics
2. Pause video and enter full screen 3. Press and hold on text to select Expected results Should be able to select text on paused, full screen video
rdar://170817667
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-02-28 20:57:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59660
EWS
Comment 2
2026-03-02 17:33:27 PST
Committed
308498@main
(5ddb3547ed33): <
https://commits.webkit.org/308498@main
> Reviewed commits have been landed. Closing PR #59660 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug